[gd_scene load_steps=2 format=3 uid="uid://e9tyz6a0ttzzz"]

[ext_resource type="Script" path="res://scripts/BattleUI.gd" id="1"]

[node name="BattleUI" type="CanvasLayer" groups=["battle_ui"]]
script = ExtResource("1")

[node name="TopBar" type="PanelContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 85.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="TopBar"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="TopBar/MarginContainer"]
layout_mode = 2

[node name="TurnLabel" type="Label" parent="TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 48
text = "Turn: 1"
vertical_alignment = 1

[node name="SkillGaugeContainer" type="HBoxContainer" parent="TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="BottomPanel" type="PanelContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -143.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="BottomPanel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="TeamDisplay" type="HBoxContainer" parent="BottomPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1
